<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_auth">授权</string>
    <string name="account_bind_setting">帐号与绑定设置</string>
    <string name="account_login">登录</string>
    <string name="account_logout">退出登录</string>
    <string name="account_verify_code">验证</string>
    <string name="action_confirm">确定</string>
    <string name="action_confirm_delete">确认删除</string>
    <string name="action_confirm_hide">确认</string>
    <string name="action_modify">修改</string>
    <string name="action_send">发送</string>
    <string name="action_setting">设置</string>
    <string name="action_share">分享</string>
    <string name="action_skip">跳过</string>
    <string name="activity_industry_chooser">选择行业</string>
    <string name="activity_medal_detail">徽章</string>
    <string name="activity_school_chooser">选择学校</string>
    <string name="activity_title_about">关于Jellow</string>
    <string name="activity_title_account_settings">@string/account_bind_setting</string>
    <string name="activity_title_answer_comment">全部评论</string>
    <string name="activity_title_block_list">黑名单</string>
    <string name="activity_title_choose_location">选择地区</string>
    <string name="activity_title_comment_detail">评论详情</string>
    <string name="activity_title_contacts">通讯录好友</string>
    <string name="activity_title_country_code">选择国家/地区</string>
    <string name="activity_title_create_group_chat">创建群聊</string>
    <string name="activity_title_debug">调试</string>
    <string name="activity_title_debug_video_entry">调试视频</string>
    <string name="activity_title_diagnose">诊断</string>
    <string name="activity_title_display_settings">浏览偏好设置</string>
    <string name="activity_title_edit_personal_info">编辑个人信息</string>
    <string name="activity_title_find_user">发现</string>
    <string name="activity_title_group_chat_detail">聊天信息</string>
    <string name="activity_title_image_selector">选择图片</string>
    <string name="activity_title_input_code">输入验证码</string>
    <string name="activity_title_list_merged_mentions_notification">\@我的内容</string>
    <string name="activity_title_login_with_phone_code">手机号登录</string>
    <string name="activity_title_login_with_phone_password">手机号密码登录</string>
    <string name="activity_title_message">消息详情</string>
    <string name="activity_title_my_collects">@string/tab_my_collects</string>
    <string name="activity_title_my_topics">@string/tab_my_topics</string>
    <string name="activity_title_new_topic_list">新鲜推荐</string>
    <string name="activity_title_notification">我的通知</string>
    <string name="activity_title_personal_update_detail">动态详情</string>
    <string name="activity_title_popular">最近热门</string>
    <string name="activity_title_post_personal_update">发布新动态</string>
    <string name="activity_title_private_settings">隐私设置</string>
    <string name="activity_title_push_settings">推送通知设置</string>
    <string name="activity_title_receive_share_to_original_post">发到Jellow动态</string>
    <string name="activity_title_repost">分享到动态</string>
    <string name="activity_title_scan">@string/scan</string>
    <string name="activity_title_scan_result">扫描结果</string>
    <string name="activity_title_selection">热门动态</string>
    <string name="activity_title_settings">设置</string>
    <string name="activity_title_system_notification">系统通知</string>
    <string name="activity_title_topic">圈子详情</string>
    <string name="activity_title_view_conversation">查看对话</string>
    <string name="activity_title_weibo">微博好友</string>
    <string name="activity_title_weibo_share">微博分享</string>
    <string name="add_block">加入黑名单</string>
    <string name="add_block_success">加入黑名单成功</string>
    <string name="add_member">添加成员</string>
    <string name="add_mute">不看TA的动态和日记</string>
    <string name="add_mute_tip">你将不会再在自己的动态流上看到TA的动态和日记，但你仍在关注TA，并能照常接收与TA的互动通知</string>
    <string name="add_person_shortcut">添加快捷方式</string>
    <string name="album">相册</string>
    <string name="all_group_chat">全部群聊</string>
    <string name="all_members">全部成员</string>
    <string name="all_replies">全部回复</string>
    <string name="anonymous_user">匿名用户</string>
    <string name="app_name">Jellow</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bind_phone">绑定手机</string>
    <string name="bind_phone_tip">绑定手机后，就可以发布内容啦~</string>
    <string name="bio">个性签名</string>
    <string name="bio_input_hint">向想认识你的人，介绍一下自己吧</string>
    <string name="block_stranger_chat">不让未关注的人向我发起聊天</string>
    <string name="block_stranger_chat_tip">开启聊天保护后，你未关注的人将不能向你发送聊天消息和打招呼。</string>
    <string name="blocked_list">黑名单</string>
    <string name="blocked_list_tip">被拉黑的用户不能关注你，也不能回复你的评论或给你的评论点赞；同时，你在其他消息的评论区也不会再看到TA的评论。</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="can_not_play_music">无法播放音乐</string>
    <string name="cancel">取消</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat">聊天</string>
    <string name="chat_confirm_delete_conversation">删除后聊天记录不可恢复，确认删除吗？</string>
    <string name="chat_confirm_resend_message">要重新发送该消息吗？</string>
    <string name="chat_follow_him_or_her">关注%s</string>
    <string name="chat_follow_reminder">和%s聊得开心吗？关注对方，了解更多</string>
    <string name="chat_message_goto_upgrade">前往升级 ></string>
    <string name="chat_message_unsupported_tips">你收到了一条消息，但由于版本过低无法显示，请升级版本后查看。</string>
    <string name="chat_no_conversation">暂时没有对话哦</string>
    <string name="chat_no_new_message">暂时没有聊天消息哦</string>
    <string name="chat_no_new_unread_content">没有新的未读内容</string>
    <string name="chat_poke">招呼</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_say_hey">打个招呼吧</string>
    <string name="chat_sound_tip">关闭后，有新聊天通知时不会产生提醒声音。</string>
    <string name="chat_sound_title">开启聊天通知提醒声音</string>
    <string name="chat_to_find_friend">去发现有趣的人</string>
    <string name="check_abandon_edited">是否放弃编辑成果？</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_cache_content">所有缓存将会被清除</string>
    <string name="clear_cache_title">清理缓存</string>
    <string name="close">关闭</string>
    <string name="code_send_to">短信验证码已发送至 %1$s %2$s</string>
    <string name="collapse">收起</string>
    <string name="collection_empty">"看到好内容后点击标记收藏
以后它们就会出现在这里"</string>
    <string name="com.crashlytics.android.build_id">a0b83d6d-bc53-4e3f-84be-f06a7c82af35</string>
    <string name="comment_deleted">该评论已删除</string>
    <string name="comment_input_forbidden_hint">该条消息的评论功能已关闭</string>
    <string name="confirm_abandon">确认放弃</string>
    <string name="contact_bind_phone_tip">绑定手机号，发现更多好友</string>
    <string name="create_post_hint">分享你的想法…</string>
    <string name="delete">删除</string>
    <string name="delete_check">是否确认要删除？</string>
    <string name="delete_comment_check">是否确认删除此条评论？</string>
    <string name="delete_hide">确认隐藏吗？</string>
    <string name="delete_personal_update_with_featured_check">这条动态已经收录进了精选，操作无法逆转，是否确认要删除？</string>
    <string name="delete_primary_comment_check">如删除此评论，下面的所有回复也将不再显示，是否确认删除？</string>
    <string name="disable_video_multi_surface">禁用视频无缝切换</string>
    <string name="discover_topic_hint">搜一搜圈子</string>
    <string name="empty_block_list">你还没有拉黑任何人</string>
    <string name="empty_contact">没有发现手机联系人</string>
    <string name="empty_following_personal_update">你还没有关注任何人，去关注一些小伙伴吧</string>
    <string name="empty_hash_tag_history">该话题下暂时还没有动态</string>
    <string name="empty_my_follower">还没有人关注你，可以试试看完善个人资料，并发布有价值的评论</string>
    <string name="empty_my_following">你还没有关注任何人，点击其他用户个人主页右上角的“关注”按钮，他就会出现在这个列表中</string>
    <string name="empty_my_topics">"你还没有加入圈子
左滑发现更多圈子"</string>
    <string name="empty_my_topics_old">"你还没有加入圈子呢
快去找找看吧"</string>
    <string name="empty_other_personal_page">还没有动态</string>
    <string name="empty_person_follower">还没有人关注%1$s</string>
    <string name="empty_person_following">还没有关注的人</string>
    <string name="empty_search_title">热点</string>
    <string name="empty_subscribe_message">"你的消息盒子是空的
到推荐页看看有什么好玩的圈子吧"</string>
    <string name="empty_subscribed_topics">还没有加入的圈子</string>
    <string name="empty_topic_history">该圈子下暂时还没有消息</string>
    <string name="empty_weibo">没有发现好友喔</string>
    <string name="enable_video_auto_play">Wi-Fi下自动播放视频</string>
    <string name="enable_video_auto_play_tip">开启后，当网络处于Wi-Fi环境下将自动静音播放视频。</string>
    <string name="err_code_not_valid">验证码格式不正确</string>
    <string name="err_msg_password_not_valid">密码格式不正确（6–20位字符）</string>
    <string name="err_msg_phone_not_valid">手机号格式不正确</string>
    <string name="expand">全文</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fail">失败</string>
    <string name="fcm_first_tip">开启优先使用FCM推送后，当满足FCM条件，优先使用FCM推送</string>
    <string name="fcm_first_title">优先使用FCM推送</string>
    <string name="feedback">告诉我们你关心什么?</string>
    <string name="finish">完成</string>
    <string name="follow">关注</string>
    <string name="follow_push_tip">关闭后，有人关注你时不会再发送系统通知。</string>
    <string name="follow_push_title">有人关注我时推送通知</string>
    <string name="followed">已关注</string>
    <string name="followers_of_who">关注%1$s的人</string>
    <string name="followings_of_who">%1$s关注的人</string>
    <string name="go_to_see">去看看</string>
    <string name="got_it">知道了</string>
    <string name="group_chat_pact_content">"欢迎你加入群聊！开启快乐的群聊时光前，请花些时间了解以下原则：

1. 做遵纪守法的好人
群聊过程请严格遵守相关法律法规，群内禁止传播色情暴恐等信息。发布违法违规言论，会被踢出群聊哦！

2. 做友善包容的好即友
群聊是即友们友好交流的空间，尊重他人是交流的前提。遇到辱骂引战等破坏群聊气氛的行为，群主有权将该成员移出群聊。

3. 做积极发言的好即友
为打造欢快的群聊小天地，每位成员要珍惜在群里相聚的机会，多多互动哦~如果你长期潜水，系统会自动将你移出群聊T T"</string>
    <string name="other">其他</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="upgrade_app_title">检查新版本</string>
    <string name="user_agreement">用户协议</string>
</resources>